
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int exit (int ) ;
 int fprintf (int ,char*,...) ;
 int stdout ;

void usage(char *s) {
 fprintf(stdout,"\nUsage: %s [-options]\n\n",s);
 fprintf(stdout,"\t-r\tSize of 'return addresses'\n");
 fprintf(stdout,"\t-b\tThe overall size of the buffer\n");
 fprintf(stdout,"\t-a\tAlignment size [0~3]\n");
 fprintf(stdout,"\t-t\tTarget's port\n");
 fprintf(stdout,"\t-s\tPort to bind shell to (in 'connecting' mode), or\n");
 fprintf(stdout,"\t\tPort for shell to connect back (in 'listening' mode)\n");
 fprintf(stdout,"\t-o\tOffset from the default return address\n");
 fprintf(stdout,"\t-h\tTarget's IP\n");
 fprintf(stdout,"\t-l\tListening for shell connecting\n");
 fprintf(stdout,"\t\tback to port specified by '-s' switch\n");
 fprintf(stdout,"\t-i\tIP for shell to connect back\n");
 fprintf(stdout,"\t-T\tNumber of seconds to wait for connection\n\n");
 fprintf(stdout,"\tNotes:\n\t======\n\t'-h' is mandatory\n");
 fprintf(stdout,"\t'-i' is mandatory if '-l' is specified\n\n");
 exit(0);
}
